--- a/home.html
+++ b/home.html
@@ -4,16 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HOME</title>
+    <link rel ="stylesheet" href="./styles.css">
+    <script src ="index.js"></script>
 </head>
-<header>HOME</header>
-<nav>
-    <a href = "./about.html">about
-    </a>
-    <a href = "./portfolio.html">portfolio
-    </a>
-</nav>
-<body>
+<div class = "header">
+<header>Alec Torres</header>
+<header>Personal Website</header>
 
+</div>
+<body>
+    <div>
+<nav>
+    <ul>
+    <li ><a id ="home" onclick = "logpage('home')" href = "./home.html">HOME</a> </li>
+    <li ><a id ="about" onclick = "logpage('about')"href = "./about.html">ABOUT</a></li>
+    <li ><a id ="portfolio" onclick = "logpage('portfolio')"href = "./portfolio.html">PORTFOLIO</a></li>
+</ul>
+</nav>
+</div>
+
+<section>
+    
+</section>
     
 </body>
 </html>
